Spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,8 +131,7 @@ h3 {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-top: 30px;
-    margin-left: 13px;
+    margin-left: 20px;
 }
 
 .para2 {
@@ -142,7 +141,7 @@ h3 {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-left: 13px;
+    margin-left: 20px;
 }
 
 .box-2 {
@@ -196,6 +195,15 @@ h3 {
     line-height: 150%;
     opacity: 0.6;
 }
+.para4{
+    color: #000;
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 150%;
+opacity: 0.6;
+}
 
 .mt-79 {
     margin-top: 79px;
@@ -228,7 +236,7 @@ h4 {
 .user1 {
     color: #000;
     font-family: 'Poppins', sans-serif;
-    font-size: 24px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 600;
     line-height: 150%;
@@ -748,8 +756,6 @@ input {
 
     .w-65 {
         width: 65%;
-        margin-left: auto;
-        margin-right: auto;
     }
 
     .mt-20 {
@@ -872,7 +878,7 @@ input {
 
     .box4 {
         width: 80px !important;
-        height: 89px !important;
+        height: 86px !important;
     }
 
     .ml-18 {
